ingessgateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: episode-gateway
spec:
  selector:
   istio: ingressgateway
  servers:
   - port:
      number: 80
      name: http
      protocol: HTTP
     hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: episodevirtual
spec:
  hosts:
  - "*"
  gateways:
  - episode-gateway
  http:
  - route:
     - destination:
         host: epsvc
         subset: v1
       weight: 90
     - destination:
         host: epsvc
         subset: v2
       weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: episodedestiniationrule
spec:
 host: epsvc
 subsets:
   - name: v1
     labels:
      version: versionv1
   - name: v2
     labels:
      version: versionv2
